{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 23,
  "lineage": "5a9cb7ff-804c-ce3b-57c2-65e626af87d7",
  "resources": [
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:internet-gateway/igw-083cf8a87b04b9f25",
            "id": "igw-083cf8a87b04b9f25",
            "owner_id": "003729975368",
            "tags": {
              "Environment": "prod",
              "Name": "prod-main-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-main-vpc"
            },
            "vpc_id": "vpc-0ffbbf9c12cb9d481"
          },
          "dependencies": [
            "module.main-vpc.aws_vpc.this",
            "module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-083cf8a87b04b9f25",
            "id": "r-rtb-08ec384adc989308f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08ec384adc989308f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-vpc.aws_internet_gateway.this",
            "module.main-vpc.aws_route_table.public",
            "module.main-vpc.aws_vpc.this",
            "module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:route-table/rtb-08ec384adc989308f",
            "id": "rtb-08ec384adc989308f",
            "owner_id": "003729975368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083cf8a87b04b9f25",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-main-vpc-public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-main-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffbbf9c12cb9d481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-vpc.aws_vpc.this",
            "module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2ba854e745ca5c9",
            "route_table_id": "rtb-08ec384adc989308f",
            "subnet_id": "subnet-09dc81985e76c9dfb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main-vpc.aws_route_table.public",
            "module.main-vpc.aws_subnet.public",
            "module.main-vpc.aws_vpc.this",
            "module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:subnet/subnet-09dc81985e76c9dfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dc81985e76c9dfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "003729975368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-main-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-main-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0ffbbf9c12cb9d481"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main-vpc.aws_vpc.this",
            "module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:vpc/vpc-0ffbbf9c12cb9d481",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0a3123dcf9f58fad5",
            "default_route_table_id": "rtb-0758e474d1a153931",
            "default_security_group_id": "sg-03716ec119e89b94b",
            "dhcp_options_id": "dopt-042d5efc6a18ed39b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ffbbf9c12cb9d481",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0758e474d1a153931",
            "owner_id": "003729975368",
            "tags": {
              "Environment": "prod",
              "Name": "prod-main-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-main-vpc"
            }
          }
        }
      ]
    }
  ]
}